Bug 1099956 - Parse regular expression after yield correctly. r=Waldo